add Partner logo

--- a/data/zh/home.toml
+++ b/data/zh/home.toml
@@ -110,7 +110,9 @@
 [[logo]]
     img = "img/partner-logo/统信.jpg"
 [[logo]]
-    img = "img/partner-logo/金石易服.PNG"
+    img = "img/partner-logo/金石易服.jpg"
+[[logo]]
+    img = "img/partner-logo/希姆计算.png"
 
 #community-logo in index
 [[community_logo]]
